# svelte-fastapi-template

./: .env  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  docker-stack.yml
backend/: .gitignore  Dockerfile
backend/app/: prestart.sh  pyproject.toml
backend/app/app/: actions.py  alembic.ini  config.py  database.py  db.py  dependencies.py  main.py  models.py  schema.py  schemas.py
backend/app/app/alembic/: env.py
backend/app/app/alembic/versions/: 2a2d9efe87a8_initial_schema.py
backend/app/app/migrations/: env.py
backend/app/app/migrations/versions/: 4de8611de4f4_initial_user_creation.py
backend/app/app/models/: users.py
frontend/: Dockerfile
frontend/app/: package-lock.json  package.json  postcss.config.js  tailwind.config.js
frontend/app/public/: index.css  index.html
frontend/app/src/: App.svelte
scripts/: dev.sh  migration_apply.sh  migration_create.sh  test.sh
