[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.62.0"
uvicorn = "^0.13.0"
gunicorn = "^20.0.4"
python-dotenv = "^0.15.0"
SQLAlchemy = "^1.3.20"
psycopg2-binary = "^2.8.6"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
python-multipart = "^0.0.5"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
alembic = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
black = "^20.8b1"
mypy = "^0.790"
sqlalchemy-stubs = "^0.3"
flake8 = "^3.8.4"
autoflake = "^1.4"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
