[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Urjeet Patel <urjeet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.62.0"
uvicorn = "^0.13.0"
databases = {extras = ["postgresql"], version = "^0.4.1"}
alembic = "^1.4.3"
psycopg2-binary = "^2.8.6"
fastapi-users = {extras = ["sqlalchemy"], version = "^3.1.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
